test/types/file/fwriteIntUnopenedFile.good
fwriteIntUnopenedFile.chpl:4: error: halt reached - ***Error: You must open "./unopenedFile.txt" before trying to write to it***
